[tool.poetry]
name = "bismuthcore"
version = "0.0.19"
description = "Core Bismuth libraries for stable nodes versions."
authors = ["Aareon Sullivan <askully13@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
polysign = "^0.1.4"
tornado = "^6.4"
concurrent-log-handler = "^0.9.25"
requests = "^2.31.0"
aioprocessing = "^2.0.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.4"
pytest = "^8.1.1"
coverage = "^7.4.4"
sphinx = "^7.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",

    # Exclude legacy directory.
    "bismuthcore/bismuthcore/legacy",
]
